fix gallery padding on smaller screens

--- a/_sass/_animation.scss
+++ b/_sass/_animation.scss
@@ -29,5 +29,5 @@
 }
 
 .enter-fade-slow {
-  animation: fade 3500ms;
+  animation: fade 3800ms;
 }
